<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Multi Sourcing</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="welcome_message">Hello World!</string>
    <string name="welcome_next">Get Involved></string>
    <string name="goto_local">Cached Actions></string>
    <string name="goto_online">Online Categories></string>
    <string name="configure">Configure</string>
    <string name="title_survey_detail">Survey Detail</string>
    <string name="title_survey_list">Surveys</string>
    <string name="hello">Hello World, ActionViewerActivity!</string>
    <string name="logo_description">Logo</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_invite">Invite Your Friend</string>
    <string name="send_action">Send Invitation</string>
    <string name="invite_hint">Invite your friend to join~</string>
    <string name="invite_button">Invite</string>

</resources>